application/~bigdata/spark/spark-standalone/k8s-1.6/spark-history.deployment.spark.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: spark-history
  namespace: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-history
  template:
    metadata:
      name: spark-history
      labels:
        app: spark-history
    spec:
      containers:
      - name: spark-history
        image: spark-py2:2.7-2.0.2-numpy-pandas-scipy
        ports:
        - name: webui
          containerPort: 18080
          protocol: TCP
        args: ["start-history"]
