application/~bigdata/spark/spark-standalone/k8s-1.6/spark-worker.deployment.spark.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spark-worker
  namespace: spark
  labels:
    app: spark-worker
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: spark-worker
    spec:
      containers:
      - name: spark-worker
        image: spark-py2:2.7-2.0.2-numpy-pandas-scipy
        resources:
          requests:
            cpu: 1000m
            memory: 4Gi
          limits:
            cpu: 1000m
            memory: 4Gi
        ports:
        - name: webui
          containerPort: 8081
          protocol: TCP
        - name: worker-port
          containerPort: 7078
          protocol: TCP
        args: ["start-worker", "spark://spark-master.spark.svc.cluster.local:7077"]
