application/~bigdata/spark/spark-standalone/k8s-1.6/spark-history.service.spark.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-history
  namespace: spark
spec:
  type: ClusterIP
  selector:
    app: spark-history
  ports:
  - name: webui
    port: 18080
    targetPort: 18080
