application/~bigdata/spark/spark-standalone/k8s-1.6/spark-master.service.spark.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  namespace: spark
spec:
  type: ClusterIP
  selector:
    app: spark-master
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
  - name: shuffle-server
    port: 7077
    targetPort: 7077
  - name: rest-server
    port: 6066
    targetPort: 6066
