application/~bigdata/spark/spark-standalone/k8s-1.6/spark-ui-porxy.service.spark.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-ui-proxy
  namespace: spark
spec:
  type: NodePort
  selector:
    component: spark-ui-proxy
  ports:
  - name: proxyui
    port: 80
    targetPort: 80
